Revisit Security Groups (#20)
Typical trying to be too clever without any end user testing scenarios.
The top level API isn't too far off, however breaking the changes up at
the API into the CRDs is just wrong.  We now do that much lower down the
stack, and ultimately should do it in the region controller to avoid too
much cohesion between all the moving parts.
